@@ -26,6 +26,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Copy page form now updates the slug field dynamically with a slugified value on blur (Loveth Omokaro)
  * Ensure selected collection is kept when navigating from documents or images listings to add multiple views & upon upload (Aman Pandey, Bojan Mihelac)
  * Keep applied filters when downloading form submissions (Suyash Srivastava)
+ * Messages added dynamically via JavaScript now have an icon to be consistent with those supplied in the page's HTML (Aman Pandey)
 
 ### Bug fixes
 
@@ -45,6 +46,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Add missing log information for `wagtail.schedule.cancel` (Stefan Hammer)
  * Fix timezone activation leaking into subsequent requests in `require_admin_access()` (Stefan Hammer)
  * Fix dialog component's message to have rounded corners at the top side (Sam)
+ * When multiple documents are uploaded and then subsequently updated, ensure that existing success messages are cleared correctly (Aman Pandey)
 
 ### Documentation
 
@@ -79,6 +81,7 @@ Support for adding custom validation logic to StreamField blocks has been formal
  * Use shared header template for `ModelAdmin` header (Aman Pandey)
  * Move models and forms for `wagtailsearch.Query` to `wagtail.contrib.search_promotions` (Karl Hobley)
  * Migrate `initErrorDetection` (tabs error counts) to a Stimulus Controller `w-count` (Aman Pandey)
+ * Migrate `window.addMessage` behaviour to a global event listener & Stimulus Controller approach with `w-messages` (Aman Pandey)
 
 ## Upgrade considerations
 
@@ -207,6 +210,36 @@ Stimulus [targets](https://stimulus.hotwired.dev/reference/targets) and [actions
 * `<button ... data-action="w-progress#activate:once" ...>` - only trigger the progress behaviour once
 * `<button ... data-action="readystatechange@document->w-progress#activate:once" data-w-progress-duration-value="5000" disabled ...>` - disabled on load (once JS starts) and becomes enabled after 5s duration
 
+### JavaScript `window.addMessages` replaced with event dispatching
+
+The undocumented `window.addMessage` function is no longer available and will throw an error if called, if similar functionality is required use DOM Event dispatching instead as follows.
+
+```js
+// old
+window.addMessage('success', 'Content has updated');
+```
+
+```js
+// new
+document.dispatchEvent(
+    new CustomEvent('w-messages:add', {
+        detail: { text: 'Content has updated', type: 'success' },
+    }),
+);
+// new (clearing existing messages before adding a new one)
+document.dispatchEvent(
+    new CustomEvent('w-messages:add', {
+        detail: {
+            clear: true,
+            text: 'All content has updated',
+            type: 'success',
+        },
+    }),
+);
+// message types 'success', 'error', 'warning' are supported
+```
+
+Note that this event name may change in the future and this functionality is still not officially supported.
 
 ### Changes to StreamField `ValidationError` classes
 
